<resources>

    <string name="app_name">V智媒</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">V智媒</string>
    <string name="bind_vilidate_code">请绑定后台电视终端码</string>
    <string name="enter_mainscreen">进入V智媒</string>
    <string name="version">V </string>
    <string name="operate_descript">V智媒Mobile</string>
    <string name="version_name">1.0.0</string>
    <string name="goods_buy">手机扫码购买商品</string>
    <string name="string_back">返回</string>
    <string name="my_district">我的商圈</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="string_video">视频</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>